--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
   -->
   <script src="../components/angular/angular.js"></script>
   <script src="../components/angular-resource/angular-resource.js"></script>
+  <script src="../components/angular-ui-utils/modules/event/event.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
