--- a/app/index.html
+++ b/app/index.html
@@ -2,8 +2,10 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>My AngularJS App</title>
+  <title>Password Safe</title>
   <link rel="stylesheet" href="css/app.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="../components/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 </head>
 <body>
   
@@ -17,6 +19,7 @@
   <script src="../components/angular/angular.js"></script>
   <script src="../components/angular-resource/angular-resource.js"></script>
   <script src="../components/angular-ui-utils/modules/event/event.js"></script>
+
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
