--- a/app/index.html
+++ b/app/index.html
@@ -5,13 +5,37 @@
   <title>Password Safe</title>
   <link rel="stylesheet" href="css/app.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="../components/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <style>
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+    </style>
   <link href="../components/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 </head>
 <body>
-  
 
-  <div ng-view></div>
+  <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Password Safe</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">Settings</a></li>
+              <li><a href="#contact">Audit</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
 
+  <div class="container" ng-view></div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
@@ -19,7 +43,9 @@
   <script src="../components/angular/angular.js"></script>
   <script src="../components/angular-resource/angular-resource.js"></script>
   <script src="../components/angular-ui-utils/modules/event/event.js"></script>
-
+  <script src="../components/angular-ui-utils/modules/if/if.js"></script>
+  <script src="../components/angular-ui-utils/modules/route/route.js"></script>
+  
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
