--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,8 @@
   <script src="../components/angular-ui-utils/modules/event/event.js"></script>
   <script src="../components/angular-ui-utils/modules/if/if.js"></script>
   <script src="../components/angular-ui-utils/modules/route/route.js"></script>
-  
+  <script src="lib/ui-bootstrap-tpls.js"></script>
+
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
