--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,8 @@
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">Settings</a></li>
               <li><a href="#contact">Audit</a></li>
+              <li><a href="#/u/">Users</a></li>
+              <li><a href="#/g/">Groups</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
