--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Password Safe</title>
-  <link rel="stylesheet" href="css/app.css"/>
+  <link rel="stylesheet" href="css/compiled.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../components/bootstrap/css/bootstrap.css" rel="stylesheet">
   <style>
@@ -47,6 +47,8 @@
   <script src="../components/angular-ui-utils/modules/event/event.js"></script>
   <script src="../components/angular-ui-utils/modules/if/if.js"></script>
   <script src="../components/angular-ui-utils/modules/route/route.js"></script>
+  <script src="../components/underscore/underscore.js"></script>
+  <script src="../components/less/underscore.js"></script>
   <script src="lib/ui-bootstrap-tpls.js"></script>
 
   <script src="js/app.js"></script>
