--- a/app/index.html
+++ b/app/index.html
@@ -48,11 +48,15 @@
   <script src="../components/angular-ui-utils/modules/if/if.js"></script>
   <script src="../components/angular-ui-utils/modules/route/route.js"></script>
   <script src="../components/underscore/underscore.js"></script>
+  <script src="../components/angular-dragon-drop/dragon-drop.js"></script>
   <script src="lib/ui-bootstrap-tpls.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
+  
+  <script src="js/controllers/Group.js"></script>
+  <script src="js/controllers/User.js"></script>
+  <script src="js/controllers/Password.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
 </body>
