user selection for groups

--- a/app/index.html
+++ b/app/index.html
@@ -39,9 +39,7 @@
 
   <div class="container" ng-view></div>
 
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
-  -->
+  <script src="../components/jquery/jquery.min.js"></script>
   <script src="../components/angular/angular.js"></script>
   <script src="../components/angular-resource/angular-resource.js"></script>
   <script src="../components/angular-ui-utils/modules/event/event.js"></script>
