--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
   
   <script src="js/controllers/Group.js"></script>
   <script src="js/controllers/User.js"></script>
-  <script src="js/controllers/Password.js"></script>
+  <script src="js/controllers/Account.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
 </body>
