--- a/app/index.html
+++ b/app/index.html
@@ -38,6 +38,7 @@
   <div class="container" ng-view></div>
 
   <script src="../components/jquery/jquery.min.js"></script>
+  <script src="../components/jquery-knob/js/jquery.knob.js"></script>
   <script src="../components/angular/angular.js"></script>
   <script src="../components/angular-resource/angular-resource.js"></script>
   <script src="../components/angular-ui-utils/modules/event/event.js"></script>
@@ -55,5 +56,6 @@
   <script src="js/controllers/Account.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+  <script src="js/directives/secret.js"></script>
 </body>
 </html>
