--- a/app/index.dev.html
+++ b/app/index.dev.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Password Safe</title>
-  <link rel="stylesheet" href="compiled.css"/>
+  <link rel="stylesheet" href="css/compiled.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../components/bootstrap/css/bootstrap.css" rel="stylesheet">
   <style>
@@ -46,7 +46,16 @@
   <script src="../components/angular-ui-utils/modules/route/route.js"></script>
   <script src="../components/underscore/underscore.js"></script>
   <script src="../components/angular-dragon-drop/dragon-drop.js"></script>
+  <script src="lib/ui-bootstrap-tpls.js"></script>
 
-  <script src="app.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/services.js"></script>
+  
+  <script src="js/controllers/Group.js"></script>
+  <script src="js/controllers/User.js"></script>
+  <script src="js/controllers/Account.js"></script>
+  <script src="js/filters.js"></script>
+  <script src="js/directives.js"></script>
+  <script src="js/directives/secret.js"></script>
 </body>
 </html>
