--- a/app/index.html
+++ b/app/index.html
@@ -37,15 +37,15 @@
 
   <div class="container" ng-view></div>
 
-  <script src="../components/jquery/jquery.min.js"></script>
-  <script src="../components/jquery-knob/js/jquery.knob.js"></script>
-  <script src="../components/angular/angular.js"></script>
-  <script src="../components/angular-resource/angular-resource.js"></script>
-  <script src="../components/angular-ui-utils/modules/event/event.js"></script>
-  <script src="../components/angular-ui-utils/modules/if/if.js"></script>
-  <script src="../components/angular-ui-utils/modules/route/route.js"></script>
-  <script src="../components/underscore/underscore.js"></script>
-  <script src="../components/angular-dragon-drop/dragon-drop.js"></script>
+  <script src="./components/jquery/jquery.min.js"></script>
+  <script src="./components/jquery-knob/js/jquery.knob.js"></script>
+  <script src="./components/angular/angular.js"></script>
+  <script src="./components/angular-resource/angular-resource.js"></script>
+  <script src="./components/angular-ui-utils/modules/event/event.js"></script>
+  <script src="./components/angular-ui-utils/modules/if/if.js"></script>
+  <script src="./components/angular-ui-utils/modules/route/route.js"></script>
+  <script src="./components/underscore/underscore.js"></script>
+  <script src="./components/angular-dragon-drop/dragon-drop.js"></script>
 
   <script src="app.min.js"></script>
 </body>
