--- a/app/index.html
+++ b/app/index.html
@@ -5,13 +5,13 @@
   <title>Password Safe</title>
   <link rel="stylesheet" href="compiled.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../components/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="./components/bootstrap/css/bootstrap.css" rel="stylesheet">
   <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
-  <link href="../components/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="./components/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 </head>
 <body>
 
