--- a/app/index.dev.html
+++ b/app/index.dev.html
@@ -5,13 +5,13 @@
   <title>Password Safe</title>
   <link rel="stylesheet" href="css/compiled.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../components/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="./components/bootstrap/css/bootstrap.css" rel="stylesheet">
   <style>
       body {
         padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
       }
     </style>
-  <link href="../components/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="./components/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 </head>
 <body>
 
@@ -37,25 +37,29 @@
 
   <div class="container" ng-view></div>
 
-  <script src="../components/jquery/jquery.min.js"></script>
-  <script src="../components/jquery-knob/js/jquery.knob.js"></script>
-  <script src="../components/angular/angular.js"></script>
-  <script src="../components/angular-resource/angular-resource.js"></script>
-  <script src="../components/angular-ui-utils/modules/event/event.js"></script>
-  <script src="../components/angular-ui-utils/modules/if/if.js"></script>
-  <script src="../components/angular-ui-utils/modules/route/route.js"></script>
-  <script src="../components/underscore/underscore.js"></script>
-  <script src="../components/angular-dragon-drop/dragon-drop.js"></script>
-  <script src="lib/ui-bootstrap-tpls.js"></script>
+  <script src="./components/jquery/jquery.min.js"></script>
+  <script src="./components/jquery-knob/js/jquery.knob.js"></script>
+  <script src="./components/angular/angular.js"></script>
+  <script src="./components/angular-resource/angular-resource.js"></script>
+  <script src="./components/angular-cookies/angular-cookies.js"></script>
+  <script src="./components/angular-ui-utils/modules/event/event.js"></script>
+  <script src="./components/angular-ui-utils/modules/if/if.js"></script>
+  <script src="./components/angular-ui-utils/modules/route/route.js"></script>
+  <script src="./components/underscore/underscore.js"></script>
+  <script src="./components/angular-dragon-drop/dragon-drop.js"></script>
+  <script src="./components/angular-http-auth/src/http-auth-interceptor.js"></script>
+  <script src="./lib/ui-bootstrap-tpls.js"></script>
 
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
+  <script src="./js/app.js"></script>
+  <script src="./js/services.js"></script>
   
-  <script src="js/controllers/Group.js"></script>
-  <script src="js/controllers/User.js"></script>
-  <script src="js/controllers/Account.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
-  <script src="js/directives/secret.js"></script>
+  <script src="./js/controllers/Group.js"></script>
+  <script src="./js/controllers/User.js"></script>
+  <script src="./js/controllers/Account.js"></script>
+  <script src="./js/controllers/Login.js"></script>
+
+  <script src="./js/filters.js"></script>
+  <script src="./js/directives.js"></script>
+  <script src="./js/directives/secret.js"></script>
 </body>
 </html>
