--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>Password Safe</title>
+  <title>Acorn Accounts</title>
   <link rel="stylesheet" href="./css/compiled.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./components/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -23,10 +23,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="brand" href="#">Password Safe</a>
+        <a class="brand" href="#">Acorn Accounts</a>
         <div class="nav-collapse collapse">
           <ul class="nav">
-            <li ui-route="#/p" ng-class="{active: $uiRoute}"><a href="#/p">Passwords</a></li>
+            <li ui-route="#/p" ng-class="{active: $uiRoute}"><a href="#/p">Accounts</a></li>
             <li ui-route="#/u" ng-class="{active: $uiRoute}"><a href="#/u">Users</a></li>
             <li ui-route="#/g" ng-class="{active: $uiRoute}"><a href="#/g">Groups</a></li>
           </ul>
