--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
       }
     </style>
   <link href="./components/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+  <script src="http://127.0.0.1:35729/livereload.js"></script>
 </head>
 <body>
 
@@ -19,21 +20,21 @@
     ng-controller="HeaderCtrl">
     <div class="navbar-inner">
       <div class="container">
-        <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="brand" href="#">Acorn Accounts</a>
-        <div class="nav-collapse collapse">
           <ul class="nav">
             <li ui-route="#/p" ng-class="{active: $uiRoute}"><a href="#/p">Accounts</a></li>
             <li ui-route="#/u" ng-class="{active: $uiRoute}"><a href="#/u">Users</a></li>
             <li ui-route="#/g" ng-class="{active: $uiRoute}"><a href="#/g">Groups</a></li>
           </ul>
-          <a class="pull-right brand" ng-click="logout();">{{currentUser.name}}</a>
-          </div>
-        </div><!--/.nav-collapse -->
+          
+        <div class="nav pull-right">
+          <a href="#" class="dropdown-toggle brand" data-toggle="dropdown">
+            {{currentUser.name}}
+            <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <a ng-click="logout();">Logout</a>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
