--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
             <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            <a ng-click="logout();">Logout</a>
+            <button class="btn btn-link" ng-click="logout();">Logout</button>
           </ul>
         </div>
       </div>
