--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,11 @@
       }
     </style>
   <link href="./components/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-  <!-- <script src="http://127.0.0.1:35729/livereload.js"></script> -->
+
+  <!-- @if NODE_ENV == 'DEVELOPMENT' -->
+  <script src="http://127.0.0.1:35729/livereload.js"></script>
+  <!-- @endif -->
+
 </head>
 <body>
 
