Use grunt-angular-templates

--- a/app/index.html
+++ b/app/index.html
@@ -57,7 +57,9 @@
   <script src="./components/underscore/underscore.js"></script>
   <script src="./components/angular-dragon-drop/dragon-drop.js"></script>
   <script src="./components/angular-http-auth/src/http-auth-interceptor.js"></script>
-
+  
   <script src="app.min.js"></script>
+  <script src="templates.js"></script>
+
 </body>
 </html>
